Main Menu und erstellen der Presentation

--- a/src/com.koeftespiess/mainMenu/MainMenu.fxml
+++ b/src/com.koeftespiess/mainMenu/MainMenu.fxml
@@ -1,11 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label layoutX="286.0" layoutY="175.0" text="Label"/>
+        <Accordion prefHeight="400.0" prefWidth="150.0">
+            <panes>
+                <TitledPane animated="false" text="Filme">
+                    <content>
+                        <VBox>
+                            <Button mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                        </VBox>
+                    </content>
+                </TitledPane>
+                <TitledPane animated="false" text="Präsentation">
+                    <content>
+                        <VBox>
+                            <Button mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                        </VBox>
+                    </content>
+                </TitledPane>
+                <TitledPane animated="false" text="Räume">
+                    <content>
+                        <VBox>
+                            <Button mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                        </VBox>
+                    </content>
+                </TitledPane>
+                <TitledPane animated="false" text="Reservation">
+                    <content>
+                    </content>
+                </TitledPane>
+            </panes>
+        </Accordion>
     </children>
 </AnchorPane>
