--- a/src/comkoeftespiess/createReservation/CreateReservation.fxml
+++ b/src/comkoeftespiess/createReservation/CreateReservation.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="comkoeftespiess.createReservation.CreateReservationController">
     <children>
         <VBox prefWidth="200">
             <Pane prefWidth="200">
@@ -11,7 +11,7 @@
                 <TitledPane fx:id="presentation" layoutX="50.0" layoutY="120.0" text="Präsentationen" />
 
                 <Button layoutX="480.0" layoutY="340.0" prefWidth="70" text="Erstellen" />
-                <Button layoutX="480.0" layoutY="370.0" prefWidth="70" text="Zurück" />
+                <Button layoutX="480.0" layoutY="370.0" prefWidth="70" text="Zurück" onAction="#back"/>
             </Pane>
         </VBox>
     </children>
