--- a/src/com/koeftespiess/createMovie/CreateMovie.fxml
+++ b/src/com/koeftespiess/createMovie/CreateMovie.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="comkoeftespiess.createMovie.CreateMovieController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.createMovie.CreateMovieController">
     <children>
         <ImageView fx:id="movieImage" fitHeight="105.0" fitWidth="149.0" layoutX="48.0" layoutY="264.0" onDragDropped="#handleDrop" onDragOver="#handleDragOver" smooth="false" />
         <VBox prefWidth="200">
