--- a/src/java/com/koeftespiess/presentation/createPresentation.fxml
+++ b/src/java/com/koeftespiess/presentation/createPresentation.fxml
@@ -4,26 +4,26 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.presentation.CreatePresentation">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.presentation.CreatePresentationController">
     <children>
         <VBox layoutX="50.0" prefHeight="400" prefWidth="200">
-            <ComboBox layoutY="50.0" prefWidth="200" promptText="Film auswählen">
+            <ComboBox fx:id="movie" layoutY="50.0" prefWidth="200" promptText="Film auswählen">
                 <VBox.margin>
-                    <Insets top="50.0"/>
+                    <Insets top="50.0" />
                 </VBox.margin>
             </ComboBox>
-            <ComboBox prefWidth="200" promptText="Raum auswählen">
+            <ComboBox fx:id="room" prefWidth="200" promptText="Raum auswählen">
                 <VBox.margin>
-                    <Insets top="50.0"/>
+                    <Insets top="50.0" />
                 </VBox.margin>
             </ComboBox>
-            <TextField promptText="Uhrzeit">
-                <VBox.margin>
-                    <Insets top="50.0"/>
-                </VBox.margin>
-            </TextField>
+         <DatePicker fx:id="date" prefHeight="25.0" prefWidth="199.0">
+            <VBox.margin>
+               <Insets top="50.0" />
+            </VBox.margin>
+         </DatePicker>
         </VBox>
-        <Button layoutX="480.0" layoutY="340.0" prefWidth="70" text="Erstellen"/>
+        <Button fx:id="createButton" layoutX="480.0" layoutY="340.0" onAction="#addShow" prefWidth="70" text="Erstellen" />
+        <Button fx:id="backButton" layoutX="480.0" layoutY="370.0" onAction="#back" prefWidth="70" text="Zurück" />
     </children>
 </AnchorPane>
