--- a/src/java/com/koeftespiess/mainMenu/MainMenu.fxml
+++ b/src/java/com/koeftespiess/mainMenu/MainMenu.fxml
@@ -3,28 +3,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1 fx:controller=" fx:controller="com.koeftespiess.mainMenu.MainMenuController">
     <children>
         <Accordion prefHeight="400.0" prefWidth="150.0">
             <panes>
                 <TitledPane animated="false" text="Filme">
                     <content>
                         <VBox>
-                            <Button mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createMovie" onAction="#changeToCreateMovie" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
                 <TitledPane animated="false" text="Präsentation">
                     <content>
                         <VBox>
-                            <Button mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createPresentation" onAction="#changeToCreatePresentation" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
                 <TitledPane animated="false" text="Räume">
                     <content>
                         <VBox>
-                            <Button mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createRoom" onAction="#changeToCreateRoom" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
