--- a/src/java/com/koeftespiess/mainMenu/MainMenu.fxml
+++ b/src/java/com/koeftespiess/mainMenu/MainMenu.fxml
@@ -7,7 +7,7 @@
     <children>
         <Accordion prefHeight="400.0" prefWidth="150.0">
             <panes>
-                <TitledPane animated="false" text="Filme">
+                <TitledPane animated="false" text="Filme" onMouseClicked="#showMovies">
                     <content>
                         <VBox>
                             <Button fx:id="createMovie" onAction="#changeToCreateMovie" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
