--- a/src/java/com/koeftespiess/mainMenu/MainMenu.fxml
+++ b/src/java/com/koeftespiess/mainMenu/MainMenu.fxml
@@ -3,28 +3,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1 fx:controller=" fx:controller="com.koeftespiess.mainMenu.MainMenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.mainMenu.MainMenuController">
     <children>
         <Accordion prefHeight="400.0" prefWidth="150.0">
             <panes>
                 <TitledPane animated="false" text="Filme">
                     <content>
                         <VBox>
-                            <Button fx:id="createMovie" onAction="#changeToCreateMovie" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createMovie" mnemonicParsing="false" onAction="#showMovies" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
                 <TitledPane animated="false" text="Präsentation">
                     <content>
                         <VBox>
-                            <Button fx:id="createPresentation" onAction="#changeToCreatePresentation" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createPresentation" mnemonicParsing="false" onAction="#changeToCreatePresentation" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
                 <TitledPane animated="false" text="Räume">
                     <content>
                         <VBox>
-                            <Button fx:id="createRoom" onAction="#changeToCreateRoom" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createRoom" mnemonicParsing="false" onAction="#changeToCreateRoom" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
@@ -34,5 +34,33 @@
                 </TitledPane>
             </panes>
         </Accordion>
+      <GridPane fx:id="grid" layoutX="150.0" prefHeight="400.0" prefWidth="452.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
     </children>
+
+    <Button layoutX="533.0" layoutY="350.0" onAction="#showRoom">test</Button>
 </AnchorPane>
