--- a/src/java/com/koeftespiess/createReservation/CreateReservation.fxml
+++ b/src/java/com/koeftespiess/createReservation/CreateReservation.fxml
@@ -18,7 +18,7 @@
                 <Button layoutX="20.0" layoutY="352.0" onAction="#back" prefHeight="36.0" prefWidth="64.0" text="Zurück" />
                 <Label layoutX="20.0" layoutY="95.0" text="Name des Kunden" />
                 <Label layoutX="20.0" layoutY="180.0" text="Was wollen Sie sich ansehen" />
-            <Button layoutX="20.0" layoutY="260.0" mnemonicParsing="false" text="Sitzplätze auswählen" />
+            <Button layoutX="20.0" layoutY="260.0" onAction="#selectSeats" mnemonicParsing="false" text="Sitzplätze auswählen" />
             </Pane>
         </VBox>
         <Label layoutX="190.0" layoutY="27.0" text="Reservation erstellen">
@@ -26,6 +26,5 @@
                 <Font size="24.0" />
             </font>
         </Label>
-          <Button layoutX="494.0" layoutY="351.0" onAction="#create" prefHeight="36.0" prefWidth="64.0" text="Erstellen" />
     </children>
 </AnchorPane>
