--- a/src/java/com/koeftespiess/createMovie/CreateMovie.fxml
+++ b/src/java/com/koeftespiess/createMovie/CreateMovie.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.image.ImageView?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.createMovie.CreateMovieController">
     <children>
-        <ImageView fx:id="movieImage" fitHeight="105.0" fitWidth="149.0" layoutX="48.0" layoutY="264.0" onDragDropped="#handleDrop" onDragOver="#handleDragOver" smooth="false" />
         <VBox prefWidth="200">
             <Pane>
                 <TextField fx:id="movieName" layoutX="35.0" layoutY="106.0" prefHeight="36.0" prefWidth="186.0" promptText="Name des Films" />
@@ -17,18 +16,18 @@
                 <Label layoutX="35.0" layoutY="89.0" text="Name" />
                 <Label layoutX="34.0" layoutY="168.0" text="Beschreibung" />
                 <Label layoutX="37.0" layoutY="246.0" text="Zeitdauer" />
+            <Label fx:id="warningLabel" layoutX="37.0" layoutY="65.0" />
             </Pane>
         </VBox>
         <Label fx:id="titlelb" layoutX="215.0" layoutY="21.0" text="Film hinzufügen">
             <font>
                 <Font size="24.0" />
-            </font></Label>
-        <Button layoutX="493.0" layoutY="334.0" onAction="#addMovie" prefHeight="36.0" prefWidth="64.0" text="Erstellen" />
-        <Label fx:id="dragdroplb" alignment="CENTER" contentDisplay="CENTER" disable="true" graphicTextGap="0.0" layoutX="352.0" layoutY="144.0" prefHeight="111.0" prefWidth="127.0" style="-fx-background-color: grey;" text="Drag and Drop" textAlignment="RIGHT" textFill="WHITE" textOverrun="CENTER_WORD_ELLIPSIS">
-            <font>
-                <Font size="9.0" />
             </font>
         </Label>
+        <Button fx:id="cButton" layoutX="493.0" layoutY="334.0" onAction="#informationProof" prefHeight="36.0" prefWidth="64.0" text="Erstellen" />
+        <ImageView fx:id="imageView" fitHeight="131.0" fitWidth="137.0" layoutX="352.0" layoutY="163.0" style="-fx-background-color: #BDBDBD;">
+        </ImageView>
         <Label fx:id="piclb" layoutX="352.0" layoutY="126.0" text="Bild" />
+      <Button onAction="#openFileChooser" layoutX="385.0" layoutY="122.0" mnemonicParsing="false" text="Bild auswählen" />
     </children>
 </AnchorPane>
