--- a/src/java/com/koeftespiess/createReservation/showRoom.fxml
+++ b/src/java/com/koeftespiess/createReservation/showRoom.fxml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="669.0" prefWidth="1073.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.createReservation.showRoomController">
-    <Button layoutX="928.0" layoutY="629.0" mnemonicParsing="false" onAction="#create" prefHeight="25.0" prefWidth="54.0" text="Zurück" />
-    <Button layoutX="998.0" layoutY="629.0" mnemonicParsing="false" onAction="#back" text="Erstellen" />
-   <GridPane fx:id="seatPane" layoutX="14.0" layoutY="14.0" prefHeight="608.0" prefWidth="1043.0">
-   </GridPane>
-
-</AnchorPane>
+<BorderPane fx:id="bPane" prefHeight="669.0" prefWidth="1073.0" style="-fx-background-color: #424242;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.createReservation.showRoomController">
+    <top>
+        <HBox alignment="CENTER">
+            <Label fx:id="warningLabel" />
+        </HBox>
+    </top>
+    <center>
+        <HBox fx:id="hBox" alignment="CENTER">
+            <GridPane fx:id="seatPane" hgap="5.0" vgap="5.0">
+            </GridPane>
+        </HBox>
+    </center>
+    <bottom>
+        <HBox alignment="CENTER_RIGHT">
+            <Button mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="54.0" style="-fx-background-color: white;" text="Zurück" />
+            <Button mnemonicParsing="false" onAction="#informationProof" style="-fx-background-color: white;" text="Erstellen">
+            <HBox.margin>
+               <Insets left="10.0" />
+            </HBox.margin></Button>
+        </HBox>
+    </bottom>
+</BorderPane>
