--- a/src/java/com/koeftespiess/createRoom/CreateRoom.fxml
+++ b/src/java/com/koeftespiess/createRoom/CreateRoom.fxml
@@ -8,13 +8,14 @@
    <children>
       <Pane prefHeight="400.0" prefWidth="600.0">
          <children>
+            <Label fx:id="warningLabel" layoutX="36.0" layoutY="47.0" />
             <TextField fx:id="nametxt" layoutX="35.0" layoutY="87.0" prefHeight="36.0" prefWidth="186.0" />
             <Label fx:id="namelb" layoutX="35.0" layoutY="65.0" prefHeight="22.0" prefWidth="107.0" text="Name des Raums" />
             <Label fx:id="rowlb" layoutX="35.0" layoutY="242.0" prefHeight="22.0" prefWidth="107.0" text="Anzahl Reihen" />
             <Label fx:id="collb" layoutX="37.0" layoutY="148.0" prefHeight="22.0" prefWidth="107.0" text="Anzahl Spalten" />
             <TextField fx:id="roomCols" layoutX="35.0" layoutY="170.0" prefHeight="36.0" prefWidth="186.0" />
             <TextField fx:id="roomRows" layoutX="35.0" layoutY="264.0" prefHeight="36.0" prefWidth="186.0" />
-            <Button fx:id="bt" layoutX="493.0" layoutY="334.0" mnemonicParsing="false" onAction="#create" prefHeight="36.0" prefWidth="72.0" text="Erstellen" />
+            <Button fx:id="bt" layoutX="493.0" layoutY="334.0" mnemonicParsing="false" onAction="#informationProof" prefHeight="36.0" prefWidth="72.0" text="Erstellen" />
             <Button fx:id="btback" layoutX="27.0" layoutY="334.0" mnemonicParsing="false" onAction="#back" prefHeight="36.0" prefWidth="64.0" text="Zurück" />
             <Label fx:id="titlelb" layoutX="207.0" layoutY="21.0" text="Raum hinzufügen">
                <font>
