--- a/src/java/com/koeftespiess/mainMenu/MainMenu.fxml
+++ b/src/java/com/koeftespiess/mainMenu/MainMenu.fxml
@@ -3,39 +3,44 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1 fx:controller=" fx:controller="com.koeftespiess.mainMenu.MainMenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.mainMenu.MainMenuController">
     <children>
         <Accordion prefHeight="400.0" prefWidth="150.0">
             <panes>
                 <TitledPane animated="false" text="Filme">
                     <content>
                         <VBox>
-                            <Button fx:id="createMovie" onAction="#changeToCreateMovie" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createMovie" mnemonicParsing="false" onAction="#changeToCreateMovie" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
                 <TitledPane animated="false" text="Präsentation">
                     <content>
                         <VBox>
-                            <Button fx:id="createPresentation" onAction="#changeToCreatePresentation" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createPresentation" mnemonicParsing="false" onAction="#changeToCreatePresentation" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
                 <TitledPane animated="false" text="Räume">
                     <content>
                         <VBox>
-                            <Button fx:id="createRoom" onAction="#changeToCreateRoom" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createRoom" mnemonicParsing="false" onAction="#changeToCreateRoom" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
                 <TitledPane animated="false" text="Reservation">
                     <content>
                         <VBox>
-                            <Button fx:id="createReservation" onAction="#changeTocreateReservation" mnemonicParsing="false" prefWidth="150.0" text="Erstellen" />
+                            <Button fx:id="createReservation" mnemonicParsing="false" onAction="#changeTocreateReservation" prefWidth="150.0" text="Erstellen" />
                         </VBox>
                     </content>
                 </TitledPane>
             </panes>
         </Accordion>
+      <ScrollPane hbarPolicy="NEVER" layoutX="150.0" prefHeight="400.0" prefWidth="450.0">
+        <content>
+          <AnchorPane fx:id="moviePane" minHeight="0.0" minWidth="0.0" prefHeight="394.0" prefWidth="449.0" />
+        </content>
+      </ScrollPane>
     </children>
 </AnchorPane>
