--- a/src/java/com/koeftespiess/mainMenu/movieCard.fxml
+++ b/src/java/com/koeftespiess/mainMenu/movieCard.fxml
@@ -4,13 +4,13 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="200" prefWidth="400" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.mainMenu.movieCardController">
+<AnchorPane prefHeight="200" prefWidth="400" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.mainMenu.MovieCardController">
    <children>
       <ImageView fx:id="movieImage" fitHeight="200.0" fitWidth="150.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="335.0" layoutY="162.0" maxHeight="1.7976931348623157E308" maxWidth="160.0" mnemonicParsing="false" text="Delete" />
+      <Button fx:id="delete" onAction="#delete" layoutX="335.0" layoutY="162.0" maxHeight="1.7976931348623157E308" maxWidth="160.0" text="Delete" />
       <Label fx:id="name" layoutX="200.0" layoutY="20.0" text="Filmname: " />
       <Label fx:id="duration" layoutX="200.0" layoutY="54.0" text="Dauer:" />
-      <Label layoutX="200.0" layoutY="88.0" text="Beschreibung: " />
-      <Label fx:id="Description" alignment="TOP_LEFT" layoutX="200.0" layoutY="102.0" />
+      <Label fx:id="descriptionT" layoutX="200.0" layoutY="88.0" text="Beschreibung: " />
+      <Label fx:id="description" alignment="TOP_LEFT" layoutX="200.0" layoutY="102.0" />
    </children>
 </AnchorPane>
