--- a/src/java/com/koeftespiess/presentation/createPresentation.fxml
+++ b/src/java/com/koeftespiess/presentation/createPresentation.fxml
@@ -7,6 +7,11 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koeftespiess.presentation.CreatePresentationController">
     <children>
         <VBox layoutX="50.0" prefHeight="400" prefWidth="200">
+            <Label fx:id="warningLabel">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin>
+         </Label>
             <ComboBox fx:id="movie" layoutY="50.0" prefWidth="200" promptText="Film auswählen">
                 <VBox.margin>
                     <Insets top="50.0" />
@@ -22,8 +27,18 @@
                     <Insets top="50.0" />
                 </VBox.margin>
             </DatePicker>
+         <TextField fx:id="hours" promptText="HH">
+             <VBox.margin>
+                 <Insets top="20"/>
+             </VBox.margin>
+         </TextField>
+         <TextField fx:id="seconds" promptText="SS">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin>
+         </TextField>
         </VBox>
-        <Button fx:id="createButton" layoutX="480.0" layoutY="340.0" onAction="#addShow" prefWidth="70" text="Erstellen" />
+        <Button fx:id="createButton" layoutX="480.0" layoutY="340.0" onAction="#informationProof" prefWidth="70" text="Erstellen" />
         <Button fx:id="backButton" layoutX="480.0" layoutY="370.0" onAction="#back" prefWidth="70" text="Zurück" />
     </children>
 </AnchorPane>
